# yycode

./: .env.example  .gitignore  README.md  __init__.py  code_review_report_20250424.md  code_review_summary.md  log.txt  main.py  math_quiz.py  math_test.html  math_test.py  pyproject.toml  quiz_runner.py  test_file.txt  test_prompts.md  test_report.md
agent/: __init__.py  app_paths.py  approval.py  branding.py  cancellation.py  change_snapshot.py  context_compressor.py  graph.py  llm_retry.py  logger.py  message_context_manager.py  message_format.py  plan_snapshot.py  session.py  session_replay.py  session_store.py  skills.py  streaming.py  subagent.py  task_memory.py  todo_manager.py  tool_retry.py  version.py
changes/: CHANGELOG.md  CHANGELOG_en.md  CHANGELOG_zh.md
docs/: acp_research_and_implementation_plan.md  acp_yoyohub_integration_requirements.md  agent_loop_opencode_comparison.md  code_agent_roadmap.md  code_review_20250423.md  code_review_report_20250423.md  confirmed_plan_changelog_update.md  confirmed_plan_clean_baseline_roadmap_refresh.md  confirmed_plan_lsp_integration.md  confirmed_plan_p0_p2_closure.md  confirmed_plan_roadmap_items_1_5.md  confirmed_plan_web_search_tool.md  context_compression_design.md  core_workflow.md  core_workflow_refactor_design.md  dependency_versions.md  file_operation_feedback_design.md  full_tui_design.md  implementation_roadmap_todo.md  long_task_summary_memory_design.md  lsp_integration_design.md  message_token_manager_design.md  project_structure.md  security_review_report.md  session_persistence_design.md  structured_event_timeline_design.drawio  structured_event_timeline_design.md  structured_event_timeline_flowchart.drawio  subagent_explicit_skill_design.md  task_graph_dag_design.md  tui_flow_analysis.md  usage.md  workflow_diagram.mmd  workflow_diagram_art.txt  yoyoagent_acp_compatibility_report.md  yoyoagent_agent_sdk_design.md  yoyoagent_architecture.drawio  yoyoagent_core_workflow.drawio  yoyoagent_working_principles.pptx
evals/: README.md  __init__.py  common.py  run.py
examples/: CODE_REVIEW.md  PROJECT_IMPROVEMENTS.md  README.md  code_review_report.md  hello.py  requirements.txt  test_hello.py  test_utils.py  utils.py
skills/: code_review.md  code_workflow.md  plan.md
tests/: test_acp.py  test_anthropic_provider.py  test_apply_patch_tool.py  test_code_navigation_tools.py  test_compatibility_primitives.py  test_grep_tool.py  test_llm_retry.py  test_lsp_tools.py  test_main_input.py  test_message_context_manager.py  test_message_format.py  test_openai_provider_reasoning.py  test_packaging.py  (+21 more)
(+100 files in other folders)
