[project]
name = "yoyoagent"
version = "0.3.1"
description = "Learning LangGraph agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "tiktoken>=0.12.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
