[project]
name = "yycode"
version = "0.3.4"
description = "Terminal coding agent with TUI, plain input mode, tools, skills, and ACP support"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "tiktoken>=0.12.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "textual==8.2.4"
]

[project.scripts]
yycode = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["agent*", "tools*", "utils*"]
exclude = ["sessions*", "output*", "tests*", "examples*", "docs*", "changes*"]

[tool.setuptools.package-data]
"agent.tui" = ["*.tcss"]

[tool.setuptools.data-files]
"skills" = ["skills/*.md"]
"skills/drawio" = ["skills/drawio/SKILL.md"]
"skills/ppt" = ["skills/ppt/SKILL.md"]
"skills/drawio/agents" = ["skills/drawio/agents/*"]
"skills/drawio/assets" = ["skills/drawio/assets/*"]
"skills/drawio/docs" = ["skills/drawio/docs/*"]
"skills/drawio/references" = ["skills/drawio/references/*"]
"skills/drawio/styles" = ["skills/drawio/styles/*.json"]
"skills/drawio/styles/built-in" = ["skills/drawio/styles/built-in/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
